--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,10 +13,11 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_library"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"/>
+            android:layout_height="?attr/actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways"/>
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/tl_library"
+            android:id="@+id/tab_library"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         
