--- a/app/src/main/res/layout/fragment_play_list.xml
+++ b/app/src/main/res/layout/fragment_play_list.xml
@@ -8,8 +8,7 @@
         android:id="@+id/toolbar_playlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+        android:minHeight="?attr/actionBarSize" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_playlist"
