--- a/app/src/main/res/layout/fragment_folders.xml
+++ b/app/src/main/res/layout/fragment_folders.xml
@@ -40,8 +40,7 @@
             android:id="@+id/proBar_folders"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="invisible"/>
+            android:layout_centerInParent="true" />
 
     </RelativeLayout>
 
