--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="white">#FFFFFF</color>
     <color name="light_gray">#e1e0e0</color>
     <color name="dark_gray">#a9a5a5</color>
+    <color name="gray">#e2dede</color>
+    <color name="black">#000000</color>
 </resources>
